@@ -5,6 +5,7 @@ Current Release
 - Made ReverseIP more robust.
 - Made DbAccess thread safe.
 - Fixed deadlock condition with all table lock.
+- Fixed key error if no reverse range zone assignments were found.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
